--- a/index.html
+++ b/index.html
@@ -34,8 +34,7 @@
         </div>
         <div id="about-section">
             <div class="image">
-                <img data-testId="slackProfilePicture" src="photos/Slack photo.png" alt="my photo
-                    ">
+                <img data-testId="slackProfilePicture" src="slack_photo.png" alt="my photo">
             </div>
             <div class="about-text">
                 <h1>About Me</h1>
